refacoted code, added pic

--- a/index.html
+++ b/index.html
@@ -34,18 +34,24 @@
         <div class="left-section">
             <h1>Hi I'm Konrad Krok</h1>
             <h2>And I'm <span id="element"></span></h2>
-            <p>I create cool websites that look awesome and are easy to use. Let's make something amazing together!</p>
+
             <div class="btn-box">
                 <button class="btn" onclick="downloadCV()">Download CV</button>
             </div>
             <div class="social-icons">
-                <i class='bx bxs-envelope'></i>
-                <i class='bx bxl-linkedin-square'></i>
-                <i class='bx bxl-github'></i>
+                <a href="mailto:krok.konrad1@gmail.com" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxs-envelope'></i>
+                </a>
+                <a href="https://www.linkedin.com/in/krokkonrad/" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxl-linkedin-square'></i>
+                </a>
+                <a href="https://github.com/BigMoistLochu" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxl-github'></i>
+                </a>
             </div>
         </div>
         <div class="right-section">
-            <img src="images/Profile.png" alt="">
+            <img src="images/pig.png" alt="">
         </div>
     </div>
 
@@ -53,9 +59,12 @@
 
     <div id="about" class="about-section">
         <h1><span>About Me</span></h1>
-        <h2>Experienced Web Developer</h2>
-        <p>I'm a dedicated web developer with over five years of experience in building responsive and user-friendly
-            websites. My expertise includes HTML, CSS, JavaScript, and various frameworks.</p>
+        <h2>Java Developer</h2>
+        <p>A third-year computer science student, deeply passionate about backend development, DevOps, and system
+            architecture. I thrive on tackling complex problems and crafting efficient solutions. Currently, I'm diving
+            into DevOps practices to streamline development and deployment processes. I'm particularly fascinated by
+            system architecture and its pivotal role in building scalable software solutions. Committed to continuous
+            learning and growth in the tech industry.</p>
         <a href="#portfolio" class="btn">View Portfolio</a>
     </div>
 
@@ -63,7 +72,8 @@
 
     <div id="skill" class="skill-container">
         <div class="left-section">
-            <img src="images/html-5.png" alt="">
+            <img src="images/java.png"
+                alt="">
             <img src="images/css-3.png" alt="">
             <img src="images/js.png" alt="">
             <img src="images/bootstrap.png" alt="">
