added new icons and refactored code

--- a/index.html
+++ b/index.html
@@ -72,31 +72,32 @@
 
     <div id="skill" class="skill-container">
         <div class="left-section">
-            <img src="images/java.png"
-                alt="">
+            <img src="images/java.png" alt="">
+            <img src="images/springboot.png" alt="">
+            <img src="images/hibernate.png" alt="">
+            <img src="images/git.png" alt="">
+            <img src="images/mysql.png" alt="">
+            <img src="images/docker.png" alt="">
+            <img src="images/postman.png" alt="">
+            <img src="images/html-5.png" alt="">
             <img src="images/css-3.png" alt="">
             <img src="images/js.png" alt="">
             <img src="images/bootstrap.png" alt="">
-            <img src="images/tailwind.png" alt="">
-            <img src="images/react.png" alt="">
-            <img src="images/node-js.png" alt="">
-            <img src="images/mongodb.png" alt="">
-            <img src="images/MUI.png" alt="">
         </div>
         <div class="right-section">
             <div class="progress-container">
                 <div class="progress">
                     <div class="skill-name-box">
-                        <h4>HTML</h4>
-                        <h4>72%</h4>
+                        <h4>Java</h4>
+                        <h4>70%</h4>
                     </div>
                     <div class="line-background">
-                        <div class="line html"></div>
+                        <div class="line java"></div>
                     </div>
                 </div>
                 <div class="progress">
                     <div class="skill-name-box">
-                        <h4>CSS</h4>
+                        <h4>Spring Boot</h4>
                         <h4>64%</h4>
                     </div>
                     <div class="line-background">
@@ -105,7 +106,7 @@
                 </div>
                 <div class="progress">
                     <div class="skill-name-box">
-                        <h4>JavaScript</h4>
+                        <h4>Hibernate</h4>
                         <h4>82%</h4>
                     </div>
                     <div class="line-background">
@@ -114,7 +115,7 @@
                 </div>
                 <div class="progress">
                     <div class="skill-name-box">
-                        <h4>REACT</h4>
+                        <h4>MySQL</h4>
                         <h4>92%</h4>
                     </div>
                     <div class="line-background">
@@ -123,7 +124,16 @@
                 </div>
                 <div class="progress">
                     <div class="skill-name-box">
-                        <h4>Node Js</h4>
+                        <h4>Git</h4>
+                        <h4>50%</h4>
+                    </div>
+                    <div class="line-background">
+                        <div class="line nodejs"></div>
+                    </div>
+                </div>
+                <div class="progress">
+                    <div class="skill-name-box">
+                        <h4>Docker</h4>
                         <h4>50%</h4>
                     </div>
                     <div class="line-background">
@@ -137,7 +147,7 @@
     <!-- portfolio section -->
 
     <div id="portfolio" class="portfolio-section">
-        <h2>My <span>Portfolio</span></h2>
+        <h2>My <span>Projects</span></h2>
         <div class="card-container">
             <div class="card">
                 <img src="images/portfolio1.jpg" alt="">
@@ -183,6 +193,7 @@
     <!-- script tags -->
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
     <script>
         let navLinks = document.querySelector('#navLinks')
         let menuIcon = document.querySelector('.menu-icon')
@@ -224,6 +235,8 @@
             })
         }
     </script>
+
+
     <script>
         function downloadCV() {
             const link = document.createElement('a');
